--- a/src/components/category_rooms.module.css
+++ b/src/components/category_rooms.module.css
@@ -1,7 +1,7 @@
 .container {
     grid-column-start: 1;
     grid-column-end: 2;
-    grid-row-start: 3;
+    grid-row-start: 2;
     grid-row-end: 5;
 
     display: grid;
@@ -304,6 +304,8 @@
     position: fixed;
     bottom: 0;
     right: 0;
+
+    z-index: 4;
 }
 
 /*----------------------------MEDIA QUERIES-----------------------------------*/
