--- a/src/components/design_ham_menu.module.css
+++ b/src/components/design_ham_menu.module.css
@@ -2,27 +2,35 @@
     display: block;
     padding: 2em;
     padding-left: 3em;
-    padding-top: 4em;
+    padding-top: 0;
     padding-bottom: 2.5em;
     background: white;
     position: relative;
-    z-index: 99999;
+    z-index: 9999;
     transition: all 0.3s ease;
-    width: 8em;
+    width: 15em;
 }
 
 .closed {
+    display: block;
+    padding: 2em;
+    padding-left: 3em;
+    padding-top: 0;
+    padding-bottom: 2.5em;
+    background: white;
+    position: relative;
+    z-index: 9999;
+    transition: all 1s ease;
+    width: 15em;
     transform: translateX(-200%);
 }
 
-.closed li {
+/* .closed li {
     display: none;
-}
+} */
 
 .open li {
-    list-style: none;
-    /* transform: translateX(-100%); */
-    
+    list-style: none;  
 }
 
 .open li:nth-child(1) {
@@ -36,27 +44,27 @@
     font-size: 1.5em;
     display: block;
     padding: 2%;
-    /* margin-left: 15%; */
 }
 
-@media (max-width: 1300px) {
-    .open {
-        padding-top: 3em;
-        padding-right: 3em;
-    }
+.closed li {
+    list-style: none;  
 }
 
-@media (max-width: 550px) {
-    .open {
-        padding-top: 35%;
-        width: 60%;
-        padding-left: 12%;
-        padding-right: 20%;
-    }
+.closed li:nth-child(1) {
+    margin-top: 25px;
 }
 
-@media (max-width: 400px) {
+.closed li a {
+    color: black;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.5em;
+    display: block;
+    padding: 2%;
+}
+
+@media (max-width: 500px) {
     .open {
-        width: 80%;
+        padding-left: 1em;
     }
 }
