--- a/src/components/design_header.module.css
+++ b/src/components/design_header.module.css
@@ -1,95 +1,124 @@
 .larger_header {
-    display: inline-block;
-    width: 100%;
-    padding-top: 20px;
-    padding-bottom: 15px;
-    /* background: rgb(63,93,170); */
     background: white;
     color: black;
-    /* border: 1px solid yellow; */
+
     position: fixed;
     top: 0;
     z-index: 9999;
+
     transition: all 0.3s ease;
+
+    padding-top: 30px;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 33% 34% 33%;
 }
 
 .smaller_header {
     background: white;
-    padding: 0;
-    padding-top: 2px;
-    padding-bottom: 6px;
+    color: black;
+
+    position: fixed;
+    top: 0;
+    z-index: 9999;
+    
     transition: all 0.3s ease;
+
+    padding-top: 20px;
+    padding-bottom: 5px;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 33% 34% 33%;
 }
 
-.borderClass {
-    border: 1px solid yellow;
-}
-
-.colorClass {
-    background: red;
-}
-
+/*-------------------------TITLE--------------------------*/
 .title_container {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+
     text-decoration: none;
     color: black;
     font-size: 1em;
-    display: inline-block;
-    margin-left: 25%;
-    width: 50%;
     text-align: center;
+
+    display: inline-block;
+
     position: relative;
-    top: -8px;
+    top: -10px;
+
     transition: all 0.3s ease;
 }
 
 .smaller_title_container {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+
     text-decoration: none;
     color: black;
     font-size: 0.75em;
-    display: inline-block;
-    margin-left: 25%;
-    width: 50%;
     text-align: center;
+
+    display: inline-block;
+
+    position: relative;
+    top: -10px;
+
     transition: all 0.3s ease;
-}
-
-.site_title {
-    color: black;
-    position: relative;
-    z-index: -1000; 
-}
-
-.smaller_site_title {
-    color: black;
-    position: relative;
-    z-index: -1000; 
 }
 
 .site_title_text {
     color: black;
-    text-align: center;
-    display: inline-block;
-    text-align: center;
-    width: 100%;
     margin-bottom: 0;
     font-weight: 400;
 }
 
+/*-------------------------NAV BAR--------------------------*/
 .navbar {
-    color: black;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+
     list-style: none;
-    width: 25%;
     margin: 0;
-    margin-left: 5%;
     padding: 0;
     display: inline-block;
-    float: left;
-    position: absolute;
-    top: 25%;
+
+    transition: all 0.3s ease;
+}
+
+.smaller_navbar {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+
     transition: all 0.3s ease;
 }
 
 .navbar li {
+    display: inline-block;
+    margin-right: 15%;
+}
+
+.smaller_navbar li {
     display: inline-block;
     margin-right: 15%;
 }
@@ -102,26 +131,6 @@
     display: block;
     margin: 0;
     transition: all 0.3s ease;
-    /* margin-bottom: 10px; */
-}
-
-.smaller_navbar {
-    color: black;
-    list-style: none;
-    width: 25%;
-    margin: 0;
-    margin-left: 5%;
-    padding: 0;
-    display: inline-block;
-    float: left;
-    position: absolute;
-    top: 15%;
-    transition: all 0.3s ease;
-}
-
-.smaller_navbar li {
-    display: inline-block;
-    margin-right: 15%;
 }
 
 .smaller_navbar li a {
@@ -140,6 +149,12 @@
     transition: all 0.3s ease;
 }
 
+.smaller_navdropdown {
+    display: inline-block;
+    margin-right: 15%;
+    transition: all 0.3s ease;
+}
+
 .navdropdown button {
     background: white;
     text-decoration: none;
@@ -152,16 +167,6 @@
     padding-bottom: 10px;
 }
 
-.navdropdown button:focus {
-    outline: 0;
-}
-
-.smaller_navdropdown {
-    display: inline-block;
-    margin-right: 15%;
-    transition: all 0.3s ease;
-}
-
 .smaller_navdropdown button {
     background: white;
     text-decoration: none;
@@ -171,6 +176,10 @@
     font-weight: 400;
     transition: all 0.3s ease;
     padding-bottom: 10px;
+}
+
+.navdropdown button:focus {
+    outline: 0;
 }
 
 .smaller_navdropdown button:focus {
@@ -210,104 +219,186 @@
     transition: all 0.3s ease;
 }
 
+/*-------------------------SOCIAL BAR--------------------------*/
 .socialbar {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+
+    width: 60%;
+    height: 100%;
     list-style: none;
-    width: 20%;
-    margin: 0;
-    float: right;
-    text-align: right;
-    margin-right: 4%;
     padding: 0;
-    height: 0;
-    display: inline-block;
+    margin: 0;
+    margin-left: 40%;
+
+    text-align: right;
+
     position: absolute;
-    top: 25%;
+    /* top: 25%; */
+
     cursor: pointer;
+
     transition: all 0.3s ease;
+
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    grid-template-rows: auto;
 }
 
 .smaller_socialbar {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+
+    width: 40%;
+    height: 100%;
     list-style: none;
-    width: 20%;
-    margin: 0;
-    float: right;
-    text-align: right;
-    margin-right: 2%;
     padding: 0;
-    height: 0;
-    display: inline-block;
+    margin: 0;
+    margin-left: 60%;
+
+    text-align: right;
+
     position: absolute;
-    top: 20%;
+    /* top: 20%; */
+
     cursor: pointer;
+
     transition: all 0.3s ease;
+
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    grid-template-rows: auto;
 }
 
 .socialbar_link {
-    width: 2.5em;
+    grid-row-start: 1;
+    grid-row-end: 2;
+
     display: inline-block;
-    margin-right: 7.5%;
+    text-align: center;
+
     z-index: 99999;
     cursor: pointer;
-    transition: all 0.3s ease;
 }
 
 .smaller_socialbar_link {
-    width: 1.5em;
+    grid-row-start: 1;
+    grid-row-end: 2;
+
     display: inline-block;
-    margin-right: 3%;
+    text-align: center;
+
     z-index: 99999;
     cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-.socialbar_link:nth-child(3) {
-    margin-right: 15%;
-}
-
-.smaller_socialbar_link:nth-child(3) {
-    margin-right: 15%;
 }
 
 .youtube {
     background-image: url("../images/youtube_btn_black.png");
-    width: 100%;
     background-size: 100%;
     background-repeat: no-repeat;
-    height: 0;
-    padding-bottom: 100%;
-    display: inline-block;
-    margin: 0;
-    cursor: pointer;
-    z-index: 99999;
+
+    width: 2.5em;
+    height: 2.5em;
+    float: right;
+    padding: 0;
+
+    transition: all 0.3s ease;
+}
+
+.smaller_youtube {
+    background-image: url("../images/youtube_btn_black.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+
+    width: 2em;
+    height: 2em;
+    float: right;
+    padding: 0;
+
+    transition: all 0.3s ease;
 }
 
 .vimeo {
     background-image: url("../images/vimeo_btn_black.png");
-    width: 100%;
     background-size: 100%;
     background-repeat: no-repeat;
-    height: 0;
-    padding-bottom: 100%;
-    display: inline-block;
-    margin: 0;
+
+    width: 2.5em;
+    height: 2.5em;
+    float: right;
+    padding: 0;
+
+    transition: all 0.3s ease;
+}
+
+.smaller_vimeo {
+    background-image: url("../images/vimeo_btn_black.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+
+    width: 2em;
+    height: 2em;
+    float: right;
+    padding: 0;
+
+    transition: all 0.3s ease;
 }
 
 .instagram {
     background-image: url("../images/instagram_btn_black.png");
-    width: 100%;
     background-size: 100%;
     background-repeat: no-repeat;
-    height: 0;
-    padding-bottom: 100%;
-    display: inline-block;
-    margin: 0;
+
+    width: 2.5em;
+    height: 2.5em;
+    float: right;
+    padding: 0;
+
+    transition: all 0.3s ease;
+}
+
+.smaller_instagram {
+    background-image: url("../images/instagram_btn_black.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+
+    width: 2em;
+    height: 2em;
+    float: right;
+    padding: 0;
+
+    transition: all 0.3s ease;
+}
+
+/*-------------------------HUD--------------------------*/
+.ham_btn {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    text-align: center;
+    display: none;
 }
 
 .ham_menu_container {
-    width: 50%;
+    padding-top: 4em;
     position: fixed;
     z-index: 9999;
     top: 0;
+    display: none;
+}
+
+.smaller_ham_menu_container {
+    padding-top: 2.5em;
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    transition: all 0.3s ease;
+    display: none;
 }
 
 .ham_instagram {
@@ -321,10 +412,6 @@
 }
 
 @media (max-width: 1300px) {
-    .smaller_header {
-        padding-top: 10px;
-        padding-bottom: 15px;
-    }
     .navbar {
         display: none;
     }
@@ -334,9 +421,25 @@
     .smaller_socialbar_link {
         width: 2em;
     }
+
+    .ham_btn {
+        display: inline-block;
+    }
+    .ham_menu_container {
+        display: inline-block;
+    }
+    .smaller_ham_menu_container {
+        display: inline-block;
+    }
 }
 
 @media (max-width: 1000px) {
+    .socialbar {
+        grid-template-columns: 50% 50%;
+    }
+    .smaller_socialbar {
+        grid-template-columns: 50% 50%;
+    }
     .socialbar a:nth-child(2) {
         display: none;
     }
@@ -351,17 +454,41 @@
         background-size: 100%;
         background-repeat: no-repeat;
         height: 0;
-        /* margin-left: 17%; */
-        margin-top: 7.5%;
+        margin-top: 5%;
+        margin-bottom: 5%;
     }
 }
 
-@media (max-width: 550px) {
+@media (max-width: 600px) {
+    .larger_header {
+        grid-template-columns: 15% auto;
+        padding-top: 20px;
+    }
+    .smaller_header {
+        grid-template-columns: 15% auto;
+        padding-top: 10px;
+    }
+    .title_container {
+        top: -5px;
+        width: 100%;
+        margin: 0;
+    }
+    .smaller_title_container {
+        top: 0;
+        width: 100%;
+        margin: 0;
+    }
+    .site_title_text {
+        text-align: right;
+    }
     .socialbar {
         display: none;
     }
     .smaller_socialbar {
         display: none;
+    }
+    .ham_menu_container {
+        padding-top: 3em;
     }
     .ham_instagram {
         display: block;
@@ -371,9 +498,7 @@
         background-size: 100%;
         background-repeat: no-repeat;
         height: 0;
-        /* margin-left: 17%; */
         margin-top: 7.5%;
-        margin-bottom: 10%;
     }
     .ham_vimeo {
         display: block;
@@ -383,40 +508,8 @@
         background-size: 100%;
         background-repeat: no-repeat;
         height: 0;
-        /* margin-left: 17%; */
+
         margin-top: 2%;
-    }
-}
-
-@media (max-width: 500px) {
-    header {
-        padding-bottom: 12px;
-        /* display: none; */
-    }
-    .smaller_header {
-        padding-bottom: 12px;
-    }
-    .navbar {
-        display: none;
-    }
-    .title_container {
-        font-size: 1em;
-        margin-left: 25%;
-        width: 70%;
-
-    }
-    .smaller_title_container {
-        font-size: 0.8em;
-        margin-left: 25%;
-        width: 70%;
-        top: 0;
-    }
-    .site_title {
-        font-size: 1em;
-        width: 100%;
-    }
-    .site_title_text {
-        text-align: right;
     }
 }
 
