--- a/src/components/hamburger_button.module.css
+++ b/src/components/hamburger_button.module.css
@@ -1,37 +1,34 @@
 .btn {
+    z-index: 9999999;
     display: none;
 }
+
+.btn_open {
+    background-image: url("../images/hamburger_x.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+
+    width: 2.5em;
+    height: 2.5em;
+}
+
+.btn_closed {
+    background-image: url("../images/hamburger_ham.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+
+    width: 2.5em;
+    height: 2.5em;
+}  
 
 @media (max-width: 1300px) {
     .btn {
         display: block;
-        width: 2.5em;
-        height: 0;
-        padding-bottom: 6%;
+    }
+}
+
+@media (max-width: 500px) {
+    .btn {
         margin-left: 5%;
-        position: absolute;
-        /* top: 25%; */
-        /* top: 1em; */
-        z-index: 9999;
-        cursor: pointer;
     }
-    
-    .btn_open {
-        width: 100%;
-        padding-bottom: 100%;
-        background-image: url("../images/hamburger_x.png");
-        background-size: 100%;
-        background-repeat: no-repeat;
-        cursor: pointer;
-    }
-    
-    .btn_closed {
-        width: 100%;
-        /* height: 100px; */
-        padding-bottom: 100%;
-        background-image: url("../images/hamburger_ham.png");
-        background-size: 100%;
-        background-repeat: no-repeat;
-        cursor: pointer;
-    }  
 }
