--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -20,7 +20,7 @@
 
     display: grid;
     grid-template-columns:  auto;
-    grid-template-rows:  auto 20px auto;
+    grid-template-rows:  auto auto 20px auto;
 }
 
 .clouds {
