--- a/src/components/recent_shows.module.css
+++ b/src/components/recent_shows.module.css
@@ -97,7 +97,10 @@
     padding: 10px;
     font-family: 'Poppins', sans-serif;
     text-decoration: none;
+
     text-align: center;
+    margin: 0;
+    padding-top: 12px;
 }
 
 @media (max-width: 880px) {
